Monitoring tools such as Actuator and Hal Browser dependencies are added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@
 
 # developer defined port - default port if 8080
 server.port=8081
+
+# configure endpoints for Hal web explorer
+management.endpoints.web.exposure.include=*
