configure H2 database and console for the Entity used

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ server.port=8081
 
 # configure endpoints for Hal web explorer
 management.endpoints.web.exposure.include=*
+
+# Configure SQL logs
+spring.jpa.show-sql=true
+# Confifure H2 Console Logs
+spring.h2.console.enables=true
+
+# Configure H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
