--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=restful-web-services
 # Set log level to debuger mode
 #logging.level.org.springframework = debug
 
@@ -12,9 +13,19 @@ management.endpoints.web.exposure.include=*
 
 # Configure SQL logs
 spring.jpa.show-sql=true
+spring.jpa.current_session_context_class=thread
 # Confifure H2 Console Logs
-spring.h2.console.enables=true
+#spring.h2.console.enables=true
 
 # Configure H2 Database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.defer-datasource-initialization=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.url=jdbc:mysql://localhost:3308/hb_one_to_many?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=hibernate_demo
+spring.datasource.password=hibernate_demo
+spring.jpa.hibernate.ddl-auto=update
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=
